alignment fixed

--- a/style.css
+++ b/style.css
@@ -15,7 +15,10 @@
 .banner-right {
   padding-top: 160px;
   padding-left: 845px;
+  justify-content:end;
+  text-align: right;
 }
+
 .banner-tittle {
   color: #151414;
   font-weight: 700;
@@ -52,20 +55,30 @@
 
 /* test */
 
-/* .test1{
-    max-width: 100%;
-    height: 100vh;
-    background: #f15b22;
-    text-align: center;
-    background-image: url(images/banner/banner2.png);
-    background-repeat: no-repeat;
-    background-size: cover;
-    justify-content: space-between;
-    text-align: left;
-    display: flex;
-    align-items: center;
-    padding: 100px;
-} */
+.bn-c{
+  width: 100%;
+  height: 100vh;
+  background-image: url(images/banner/banner1.png);
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.rifdex{
+  padding: 200px 130px;
+  text-align: right;
+}
+
+.rti{color: #151414;
+  font-weight: 700;
+  font-size: 65px;
+  
+}
+
+.rdes{
+  color: #444343;
+  font-weight: 400;
+  font-size: 16px;
+}
 
 /* section one */
 
@@ -76,11 +89,7 @@
   gap: 87px;
   align-items: center;
 }
-.section-one-left {
-}
 
-.section-one-right {
-}
 
 .section-tittle {
   color: #151414;
@@ -102,13 +111,15 @@
   line-height: 26px;
 }
 
+
+
 /* bonus section */
 
 .section-coding {
   display: flex;
   justify-content: space-around;
   align-items: center;
-  /* margin: 30px 200px; */
+  padding: 65px 230px;
 }
 
 .coding-right {
@@ -140,7 +151,15 @@
 /* my plan section */
 
 .section-plan {
-  margin: 65px 230px;
+  padding: 65px 230px;
+
+}
+.plan-carts {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  padding: 65px 230px;
+
 }
 
 .section-heading {
